[tool.black]
line-length = 119
# required-version = '22.1.0' # see https://github.com/psf/black/issues/2493
target-version = ['py36']

[tool.isort]
line_length = 119
profile = "black"
default_section = "THIRDPARTY"
skip = [".tox", ".git", "docs", "dist", "build" , "todo"]
known_first_party = "parsy"

[tool.poetry]
name = "parsy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.rst"
packages = [{include = "parsy"}]

[tool.poetry.dependencies]
python = "^3.7"
typing-extensions = "^4.5.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
mypy = "^1.3.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
